--- a/teaching.bib
+++ b/teaching.bib
@@ -1,12 +1,40 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-07-07 17:25:13 -0500 
+%% Created for Jeff Erickson at 2025-07-22 14:33:15 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{blzk-cmesa-22,
+	abstract = {Abstract This study indicates the most effective combinations of scaffolding features within computer science and technology education settings. It addresses the research question, ``What combinations of scaffolding characteristics, contexts of use, and assessment levels lead to medium and large effect sizes among college- and graduate-level engineering and technology learners?'' To do so, studies in which scaffolding led to a medium or large effect size within the context of technology and engineering education were identified within a scaffolding meta-analysis data set. Next, two-step cluster analysis in SPSS 24 was used to identify distinct groups of scaffolding attributes tailored to learning computer science at the undergraduate and graduate levels. Input variables included different scaffolding characteristics, the context of use, education level, and effect size. There was an eight-cluster solution: five clusters were associated with large effect size, two with medium effect size, and one with both medium and large effect size. The three most important predictors were the context in which scaffolding was used, if and how scaffolding is customized over time and the decision rules that govern scaffolding change. Notably, highly effective scaffolding clusters are associated with most levels of each predictor.},
+	author = {Belland, Brian R. and Lee, Eunseo and Zhang, Anna Y. and Kim, ChanMin},
+	date-added = {2025-07-22 14:11:38 -0500},
+	date-modified = {2025-07-22 14:15:40 -0500},
+	doi = {10.1002/cae.22556},
+	journal = {Comput. Appl. Eng. Educ.},
+	keywords = {engineering education, learning technologies, scaffolding, technology education},
+	number = {6},
+	pages = {1795--1812},
+	title = {Characterizing the most effective scaffolding approaches in engineering and technology education: A clustering approach},
+	volume = {30},
+	year = {2022},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cae.22556},
+	bdsk-url-2 = {https://doi.org/10.1002/cae.22556}}
+
+@inproceedings{hg-bgbsd-96,
+	abstract = {Constructivist approaches to education advocate situating learning in real-world problems-- but these problems are complex. Providing scaffolding allows learners to deal with a problem's complexity and successfully solve and learn from these kinds of problems. In this paper, we describe a theory of learning-by-doing and suggest several ways that the "doing" can be supported without forgetting the learning. We use the metaphors of black-box and glass-box scaffolding to suggest how scaffolding might be used to support learning and performance. Black-box scaffolding is scaffolding that facilitates student performance. Black-box scaffolding performs a task in place of the student performing that performance goal, usually because learning to perform that goal is determined to be unimportant for the learning goals of the activity. Glass-box scaffolding is scaffolding that facilitates performance and learning. It is important for the student to understand what glass-box scaffolding is providing because we want the student to be able to take on the functions that the glass-box scaffolding is providing. Finally, we illustrate how glass-box and black-box scaffolding have been used in two educational software programs.},
+	author = {Hmelo, Cindy E. and Guzdial, Mark},
+	booktitle = {Proc. 1996 Int. Conf. Learning Sciences (ILCS)},
+	date-added = {2025-07-22 14:05:17 -0500},
+	date-modified = {2025-07-22 14:33:15 -0500},
+	pages = {128--134},
+	publisher = {International Society of the Learning Sciences},
+	title = {Of black and glass boxes: {Scaffolding} for doing and learning},
+	url = {https://repository.isls.org//handle/1/4076},
+	year = {1996}}
 
 @article{bp-shifw-16,
 	abstract = {Syntax Highlighting or Syntax Colouring, Plays a Vital Role in Programming Development Environments by Colour-Coding Various Code Elements Differently. The Supposition Is That This Syntax Highlighting Assists Programmers When Reading and Analysing Code. However, Academic Text Books Are Largely Only Available in Black-and-White Which Could Influence the Comprehension of Novice and Beginner Programmers. This Study Investigated Whether Student Programmers Experience More Difficulty in Reading and Comprehending Source Code When It Is Presented Without Syntax Highlighting. Number of Fixations, Fixation Durations and Regressions Were All Higher for Black-and-White Code than for Colour Code but Not Significantly So. Subjectively Students Indicated That the Colour Code Snippets Were Easier to Read and More Aesthetically Pleasing. Based on the Analysis It Could Be Concluded That Students Do Not Experience Significantly More Difficulty When Reading Code in Black-and-White as Printed in Text Books.},
@@ -19,7 +47,8 @@
 	pages = {1--11},
 	title = {Syntax Highlighting as an Influencing Factor When Reading and Comprehending Source Code},
 	volume = {9},
-	year = {2016}}
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.16910/jemr.9.1.1}}
 
 @inproceedings{sppah-mnepc-17,
 	abstract = {Most modern software programs cannot be understood in their entirety by a single programmer. Instead, programmers must rely on a set of cognitive processes that aid in seeking, filtering, and shaping relevant information for a given programming task. Several theories have been proposed to explain these processes, such as ``beacons,' for locating relevant code, and ``plans,'' for encoding cognitive models. However, these theories are decades old and lack validation with modern cognitive-neuroscience methods. In this paper, we report on a study using functional magnetic resonance imaging (fMRI) with 11 participants who performed program comprehension tasks. We manipulated experimental conditions related to beacons and layout to isolate specific cognitive processes related to bottom-up comprehension and comprehension based on semantic cues. We found evidence of semantic chunking during bottom-up comprehension and lower activation of brain areas during comprehension based on semantic cues, confirming that beacons ease comprehension.},
@@ -44,7 +73,8 @@
 	pages = {356--366},
 	title = {Enhancing program readability and comprehensibility with tools for program visualization},
 	url = {https://dl.acm.org/doi/10.5555/55823.55858},
-	year = {1988}}
+	year = {1988},
+	bdsk-url-1 = {https://dl.acm.org/doi/10.5555/55823.55858}}
 
 @inproceedings{d-ishs-15,
 	author = {Dimitri, Giovanna Maria},
@@ -55,7 +85,8 @@
 	pages = {9:1--9:12},
 	title = {The impact of Syntax Highlighting in Sonic Pi},
 	url = {https://ppig.org/papers/2015-ppig-26th-dimitri/},
-	year = {2015}}
+	year = {2015},
+	bdsk-url-1 = {https://ppig.org/papers/2015-ppig-26th-dimitri/}}
 
 @inproceedings{ahm-ervcc-16,
 	abstract = {Researchers often introduce visual tools to programming environments in order to facilitate program comprehension, reduce navigation times, and help developers answer difficult questions. Syntax highlighting is the main visual lens through which developers perceive their code, and yet its effects and the effects of richer code presentations on code comprehension have not been evaluated systematically. We present a rigorous user study comparing mainstream syntax highlighting to two visually-enhanced presentations of code. Our results show that: (1) richer code visualizations reduce the time necessary to answer questions about code features, and (2) contrary to the subjective perception of developers, richer code visualizations do not lead to visual overload. Based on our results we outline practical recommendations for tool designers.},
@@ -67,7 +98,8 @@
 	keywords = {visual programming, user study, syntax highlighting, programming, code editor, code comprehension},
 	pages = {5040--5045},
 	title = {The Effect of Richer Visualizations on Code Comprehension},
-	year = {2016}}
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1145/2858036.2858372}}
 
 @inproceedings{s-iscpc-15,
 	author = {Sarkar, Advait},
@@ -78,7 +110,8 @@
 	pages = {8:1--8:12},
 	title = {The impact of syntax colouring on program comprehension},
 	url = {https://ppig.org/papers/2015-ppig-26th-sarkar1/},
-	year = {2015}}
+	year = {2015},
+	bdsk-url-1 = {https://ppig.org/papers/2015-ppig-26th-sarkar1/}}
 
 @article{hhg-dshhp-18,
 	abstract = {Program comprehension is an important skill for programmers --extending and debugging existing source code is part of the daily routine. Syntax highlighting is one of the most common tools used to support developers in understanding algorithms. However, most research in this area originates from a time when programmers used a completely different tool chain. We examined the influence of syntax highlighting on novices'ability to comprehend source code. Additional analyses cover the influence of task type and programming experience on the code comprehension ability itself and its relation to syntax highlighting. We conducted a controlled experiment with 390 undergraduate students in an introductory Java programming course. We measured the correctness with which they solved small coding tasks. Each test subject received some tasks with syntax highlighting and some without. The data provided no evidence that syntax highlighting improves novices'ability to comprehend source code. There are very few similar experiments and it is unclear as of yet which factors impact the effectiveness of syntax highlighting. One major limitation may be the types of tasks chosen for this experiment. The results suggest that syntax highlighting squanders a feedback channel from the IDE to the programmer that can be used more effectively.},
@@ -91,7 +124,8 @@
 	pages = {2795--2828},
 	title = {Does syntax highlighting help programming novices?},
 	volume = {23},
-	year = {2018}}
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.1007/s10664-017-9579-0}}
 
 @inproceedings{tbs-aibhbp-21,
 	abstract = {To improve programming education, it is worthwhile to investigate how understanding of source code takes place. Reading is a foundational skill essential to tracing, debugging and understanding code. As readers' working memory is limited, their proficiency strongly relies on the ability to chunk and organize source code material. There are several alternative visual representations aiming to facilitate code reading, of which syntax highlighting is the most common. We hypothesized that highlighting code blocks in the style of the language Stride would scaffold students' reading process more effectively.In this exploraratory study, the code reading behavior of seven students was investigated in the context of a code comprehension task using eye tracking, stimulated Retrospective Think Aloud and interviews. The tasks were either presented using plain code, with standard syntax highlighting or with block highlighting. We found no significant differences in the students' comprehension scores. Their reading patterns, however, turned out to be strongly affected by the highlighting conditions. Remarkably, this effect appears to be subconscious, as participants consistently claimed to not have been influenced by the block highlighting. This also implies that in order to study code reading behavior and comprehension, participant reports alone are not sufficient. An approach combining objective data, such as that of eye tracking, combined with classic stimulated retrospective think aloud sessions is needed to paint the full picture.},
