--- a/topology.bib
+++ b/topology.bib
@@ -1,12 +1,36 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-06-17 15:11:17 -0500 
+%% Created for Jeff Erickson at 2025-08-01 13:19:07 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{eh-ssgs-25,
+	annote = {Keywords: morphing, planar graphs, spherical graph drawing, longitudinal shelling},
+	author = {Erickson, Jeff and Howard, Christian},
+	booktitle = {Proc. 41st Int. Symp. Comput. Geom.},
+	date-added = {2025-07-31 17:28:45 -0500},
+	date-modified = {2025-07-31 17:29:42 -0500},
+	doi = {10.4230/LIPIcs.SoCG.2025.47},
+	pages = {47:1--47:18},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+	series = {Leibniz Int. Proc. Informatics},
+	title = {Shelling and Sinking Graphs on the Sphere},
+	volume = {332},
+	year = {2025},
+	bdsk-url-1 = {https://doi.org/10.4230/LIPIcs.SoCG.2025.47}}
+
+@misc{h-esptu-08,
+	author = {Halperin, Dan},
+	date-added = {2025-07-27 21:16:31 -0500},
+	date-modified = {2025-07-27 21:17:17 -0500},
+	howpublished = {Unpublished manuscript},
+	month = {July},
+	title = {Every spherical polygon is triangulable using at most one {Steiner} point},
+	year = {2008}}
 
 @inproceedings{r-ppdij-84,
 	author = {Rosenstiehl, Pierre},
@@ -2179,7 +2203,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	date-modified = {2023-03-06 17:36:04 -0600},
 	doi = {10.4230/LIPIcs.ICALP.2020.31},
 	pages = {31:1--31:18},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Computational Complexity of the $\alpha$-Ham-Sandwich Problem},
 	volume = {168},
@@ -2669,7 +2693,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	date-modified = {2023-02-09 12:04:30 -0600},
 	doi = {10.4230/LIPIcs.SoCG.2022.27},
 	pages = {27:1--27:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Finding Weakly Simple Closed Quasigeodesics on Polyhedral Spheres},
 	volume = {224},
@@ -5105,7 +5129,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2019.83},
 	number = {144},
 	pages = {83:1--83:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {{FPT}-Algorithms for Computing {Gromov}-{Hausdorff} and Interleaving Distances Between Trees},
 	year = {2019},
@@ -5120,7 +5144,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.36},
 	number = {164},
 	pages = {36:1--36:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {An Efficient Algorithm for 1-Dimensional (Persistent) Path Homology},
 	year = {2020},
@@ -5218,7 +5242,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2020.51},
 	number = {173},
 	pages = {51:1--51:17},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {An Algorithmic Meta-Theorem for Graph Modification to Planarity and {FOL}},
 	year = {2020},
@@ -5232,7 +5256,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2020.31},
 	number = {173},
 	pages = {31:1--31:23},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Single-Source Shortest Paths and Strong Connectivity in Dynamic Planar Graphs},
 	year = {2020},
@@ -5285,7 +5309,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2019.79},
 	number = {144},
 	pages = {79:1--79:12},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Recognizing Planar {Laman} Graphs},
 	year = {2019},
@@ -5299,7 +5323,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2019.66},
 	number = {144},
 	pages = {66:1--66:17},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Min-Cost Flow in Unit-Capacity Planar Graphs},
 	year = {2019},
@@ -5313,7 +5337,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2019.33},
 	number = {144},
 	pages = {33:1--33:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Efficient Approximation Schemes for Uniform-Cost Clustering Problems in Planar Graphs},
 	year = {2019},
@@ -5327,7 +5351,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2017.44},
 	number = {87},
 	pages = {44:1--44:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Improved Guarantees for Vertex Sparsification in Planar Graphs},
 	year = {2017},
@@ -5342,7 +5366,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2017.50},
 	number = {87},
 	pages = {50:1--50:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Contracting a Planar Graph Efficiently},
 	year = {2017},
@@ -5356,7 +5380,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2017.25},
 	number = {87},
 	pages = {25:1--25:13},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Faster Approximate Diameter and Distance Oracles in Planar Graphs},
 	year = {2017},
@@ -5370,7 +5394,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2017.8},
 	number = {87},
 	pages = {8:1--8:13},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Combinatorics of Local Search: {An} Optimal 4-Local Hall's Theorem for Planar Graphs},
 	year = {2017},
@@ -5384,7 +5408,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ICALP.2018.97},
 	number = {107},
 	pages = {97:1--97:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {{NC} Algorithms for Weighted Planar Perfect Matching and Related Problems},
 	year = {2018},
@@ -5399,7 +5423,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ICALP.2018.116},
 	number = {107},
 	pages = {116:1--116:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {On Zero-One and Convergence Laws for Graphs Embeddable on a Fixed Surface},
 	year = {2018},
@@ -5578,7 +5602,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SEA.2017.8},
 	number = {75},
 	pages = {8:1--8:17},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Engineering an Approximation Scheme for Traveling Salesman in Planar Graphs},
 	year = {2017},
@@ -5605,7 +5629,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2017.12},
 	number = {87},
 	pages = {12:1--12:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {A Quasi-Polynomial-Time Approximation Scheme for Vehicle Routing on Planar and Bounded-Genus Graphs},
 	year = {2017},
@@ -5876,7 +5900,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2017.23},
 	number = {87},
 	pages = {23:1--23:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Computing Optimal Homotopies over a Spiked Plane with Polygonal Boundary},
 	year = {2017},
@@ -6346,7 +6370,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.ESA.2018.16},
 	number = {112},
 	pages = {16:1--16:17},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Near-Optimal Distance Emulator for Planar Graphs},
 	year = {2018},
@@ -6377,7 +6401,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2019.27},
 	number = {129},
 	pages = {27:1--27:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Almost Tight Lower Bounds for Hard Cutting Problems in Embedded Graphs},
 	year = {2019},
@@ -6393,7 +6417,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/OASIcs.SOSA.2019.14},
 	number = {69},
 	pages = {14:1--14:9},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {OpenAccess Ser. Inform.},
 	title = {Simple Greedy 2-Approximation Algorithm for the Maximum Genus of a Graph},
 	year = {2018},
@@ -6408,7 +6432,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2017.44},
 	number = {77},
 	pages = {44:1--44:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Implementing {Delaunay} Triangulations of the {Bolza} Surface},
 	year = {2017},
@@ -6424,7 +6448,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2017.34},
 	number = {88},
 	pages = {34:1--34:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Origamizer: {A} Practical Algorithm for Folding Any Polyhedron},
 	year = {2017},
@@ -6440,7 +6464,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2017.33},
 	number = {77},
 	pages = {33:1--33:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {On Planar Greedy Drawings of 3-Connected Planar Graphs},
 	year = {2017},
@@ -6456,7 +6480,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2017.25},
 	number = {77},
 	pages = {25:1--25:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Local Equivalence and Intrinsic Metrics between {Reeb} Graphs},
 	year = {2017},
@@ -6472,7 +6496,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.43},
 	number = {99},
 	pages = {43:1--43:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Computational Topology and the {Unique} {Games} {Conjecture}},
 	year = {2018},
@@ -6488,7 +6512,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.41},
 	number = {99},
 	pages = {41:1--41:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Shellability is {NP}-Complete},
 	year = {2018},
@@ -6505,7 +6529,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.39},
 	number = {99},
 	pages = {39:1--39:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {{Hanani}-{Tutte} for Approximating Maps of Graphs},
 	year = {2018},
@@ -6520,7 +6544,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.31},
 	number = {99},
 	pages = {31:1--31:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Graph Reconstruction by Discrete {Morse} Theory},
 	year = {2018},
@@ -6536,7 +6560,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.27},
 	number = {99},
 	pages = {27:1--27:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Embedding Graphs into Two-Dimensional Simplicial Complexes},
 	year = {2018},
@@ -6552,7 +6576,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.20},
 	number = {99},
 	pages = {20:1--20:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Subquadratic Encodings for Point Configurations},
 	year = {2018},
@@ -6568,7 +6592,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.1},
 	number = {99},
 	pages = {1:1--1:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Sampling Conditions for Conforming {Voronoi} Meshing by the VoroCrust Algorithm},
 	year = {2018},
@@ -6584,7 +6608,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2019.49},
 	number = {129},
 	pages = {49:1--49:19},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {The Unbearable Hardness of Unknotting},
 	year = {2019},
@@ -6600,7 +6624,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2019.39},
 	number = {129},
 	pages = {39:1--39:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {{$\mathbb{Z}_2$}-Genus of Graphs and Minimum Rank of Partial Symmetric Matrices},
 	year = {2019},
@@ -6617,7 +6641,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	editor = {Cabello, Sergio and Chen, Danny Z.},
 	number = {164},
 	pages = {33:1--33:13},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Finding Closed Quasigeodesics on Convex Polyhedra},
 	year = {2020},
@@ -6633,7 +6657,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.64},
 	number = {164},
 	pages = {64:1--64:11},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Fast Algorithms for Minimum Cycle Basis and Minimum Homology Basis},
 	year = {2020},
@@ -6649,7 +6673,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.35},
 	number = {164},
 	pages = {35:1--35:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Flipping Geometric Triangulations on Hyperbolic Surfaces},
 	year = {2020},
@@ -6665,7 +6689,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.32},
 	number = {164},
 	pages = {32:1--32:17},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Lexicographic Optimal Homologous Chains and Applications to Point Cloud Triangulations},
 	year = {2020},
@@ -6681,7 +6705,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.20},
 	number = {164},
 	pages = {20:1--20:18},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {The Topological Correctness of {PL}-Approximations of Isomanifolds},
 	year = {2020},
@@ -6697,7 +6721,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.21},
 	number = {164},
 	pages = {21:1--21:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Minimum Bounded Chains and Minimum Homologous Chains in Embedded Simplicial Complexes},
 	year = {2020},
@@ -6712,7 +6736,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.15},
 	number = {164},
 	pages = {15:1--15:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {The {Reeb} Graph Edit Distance Is Universal},
 	year = {2020},
@@ -6726,7 +6750,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.12},
 	number = {164},
 	pages = {12:1--12:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Homotopic Curve Shortening and the Affine Curve-Shortening Flow},
 	year = {2020},
@@ -6859,7 +6883,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.41},
 	number = {164},
 	pages = {41:1--41:17},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Combinatorial Properties of Self-Overlapping Curves and Interior Boundaries},
 	year = {2020},
@@ -6996,7 +7020,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2018.42},
 	number = {99},
 	pages = {42:1--42:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Optimal Morphs of Planar Orthogonal Drawings},
 	year = {2018},
@@ -7301,7 +7325,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2020.40},
 	number = {164},
 	pages = {40:1--40:17},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {A toroidal {Maxwell}-{Cremona}-{Delaunay} correspondence},
 	year = {2020},
@@ -7881,7 +7905,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/OASIcs.SOSA.2019.8},
 	keywords = {Koebe},
 	pages = {8:1--8:18},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {OpenAccess Ser. Inform.},
 	title = {{On Primal-Dual Circle Representations}},
 	volume = {69},
@@ -8298,7 +8322,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.STACS.2017.13},
 	number = {66},
 	pages = {13:1--13:14},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {{$\exists\mathbb{R}$}-Complete Decision Problems About Symmetric {Nash} Equilibria in Symmetric Multi-Player Games},
 	year = {2017},
@@ -8312,7 +8336,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.STACS.2016.17},
 	number = {47},
 	pages = {17:1--17:13},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {A Catalog of {$\exists\mathbb{R}$}-Complete Decision Problems About {Nash} Equilibria in Multi-Player Games},
 	year = {2016},
@@ -9789,7 +9813,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	date-modified = {2019-08-24 16:13:42 -0500},
 	doi = {10.4230/LIPIcs.SoCG.2016.22},
 	pages = {22:1--22:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {All-Pairs Minimum Cuts in Near-Linear Time for Surface-Embedded Graphs},
 	volume = {51},
@@ -10180,7 +10204,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	doi = {10.4230/LIPIcs.SoCG.2017.35},
 	number = {77},
 	pages = {35:1--35:15},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Computing the Geometric Intersection Number of Curves},
 	year = {2017},
@@ -10740,7 +10764,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	date-modified = {2019-08-24 16:13:52 -0500},
 	doi = {10.4230/LIPIcs.SoCG.2016.15},
 	pages = {15:1--15:16},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	read = {1},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Incremental {Voronoi} diagrams},
@@ -13328,10 +13352,11 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @book{e-mp-1891,
 	author = {Eberhard, Victor},
 	date-added = {2015-07-09 14:59:34 +0000},
-	date-modified = {2015-07-09 15:00:19 +0000},
+	date-modified = {2025-08-01 13:19:07 -0500},
 	publisher = {Teubner},
 	read = {1},
 	title = {Zur Morphologie der Polyeder},
+	url = {https://catalog.hathitrust.org/Record/000360656},
 	year = {1891}}
 
 @article{hhn-unnrm-12,
@@ -23847,7 +23872,7 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	date-modified = {2025-03-18 17:55:13 -0500},
 	doi = {10.4230/LIPIcs.STACS.2009.1835},
 	pages = {171--182},
-	publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
 	read = {1},
 	series = {Leibniz Int. Proc. Informatics},
 	title = {Polynomial-Time Approximation Schemes for Subset-Connectivity Problems in Bounded-Genus Graphs},
