--- a/compgeom.bib
+++ b/compgeom.bib
@@ -1,13 +1,65 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for Jeff Erickson at 2024-05-29 18:41:24 -0500 
+%% Created for Jeff Erickson at 2025-08-01 13:22:54 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{bde-ttp-96,
+	author = {Barequet, Gill and Dickerson, Matthew and Eppstein, David},
+	booktitle = {Proc. 12th Ann. ACM Symp. Comput. Geom.},
+	date-added = {2025-07-29 16:08:41 -0500},
+	date-modified = {2025-07-29 16:09:09 -0500},
+	doi = {10.1145/237218.237234},
+	keywords = {three-dimensions, triangulation},
+	pages = {38--47},
+	title = {On triangulating three-dimensional polygons},
+	year = {1996},
+	bdsk-url-1 = {https://doi.org/10.1145/237218.237234}}
+
+@article{c-mls3m-19,
+	abstract = {This article presents an algorithm that solves the 3SUM problem for n real numbers in O((n2/ log2n)(log log n)O(1)) time, improving previous solutions by about a logarithmic factor. Our framework for shaving off two logarithmic factors can be applied to other problems, such as (median,+)-convolution/matrix multiplication and algebraic generalizations of 3SUM. This work also obtains the first subquadratic results on some 3SUM-hard problems in computational geometry, for example, deciding whether (the interiors of) a constant number of simple polygons have a common intersection.},
+	author = {Chan, Timothy M.},
+	date-added = {2025-07-23 15:38:10 -0500},
+	date-modified = {2025-07-23 15:39:18 -0500},
+	doi = {10.1145/3363541},
+	journal = {ACM Trans. Algorithms},
+	keywords = {matrix multiplication, convolution, computational geometry, 3SUM},
+	number = {1},
+	pages = {7:1--7:23},
+	title = {More Logarithmic-factor Speedups for {3SUM}, (median,+)-convolution, and Some Geometric {3SUM}-hard Problems},
+	volume = {16},
+	year = {2019},
+	bdsk-url-1 = {https://doi.org/10.1145/3363541}}
+
+@article{gp-tdlt-18,
+	author = {Gr{\o}nlund, Allan and Pettie, Seth},
+	date-added = {2025-07-23 15:34:58 -0500},
+	date-modified = {2025-07-23 15:35:08 -0500},
+	doi = {10.1145/3185378},
+	journal = {J. {ACM}},
+	number = {4},
+	pages = {22:1--22:25},
+	title = {Threesomes, Degenerates, and Love Triangles},
+	volume = {65},
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.1145/3185378}}
+
+@article{go-copcg-95,
+	author = {Gajentaan, Anka and Overmars, Mark H.},
+	date-added = {2025-07-23 15:32:05 -0500},
+	date-modified = {2025-07-23 15:32:50 -0500},
+	doi = {10.1016/0925-7721(95)00022-2},
+	journal = {Comput. Geom. Theory Appl.},
+	number = {3},
+	pages = {165--185},
+	title = {On a class of ${O}(n^2)$ problems in computational geometry},
+	volume = {5},
+	year = {1995},
+	bdsk-url-1 = {https://doi.org/10.1016/0925-7721(95)00022-2}}
 
 @article{ta-chapi-82,
 	author = {Toussaint, Gottfried T. and Avis, David},
@@ -501,18 +553,21 @@
 @article{m-fppa-90,
 	author = {Mulmuley, Ketan},
 	date-added = {2016-07-14 18:09:21 +0000},
-	date-modified = {2016-07-14 18:09:37 +0000},
+	date-modified = {2025-07-29 21:57:22 -0500},
+	doi = {10.1016/S0747-7171(08)80064-8},
 	journal = {J. Symbolic Comput.},
 	number = {3--4},
 	pages = {253--280},
 	title = {A Fast Planar Partition Algorithm, {I}},
 	volume = {10},
-	year = {1990}}
+	year = {1990},
+	bdsk-url-1 = {https://doi.org/10.1016/S0747-7171(08)80064-8}}
 
 @article{cs-arscg-89,
 	author = {Clarkson, Kenneth L. and Shor, Peter W.},
 	date-added = {2016-07-14 18:07:49 +0000},
-	date-modified = {2016-07-14 18:08:10 +0000},
+	date-modified = {2025-08-01 13:14:09 -0500},
+	doi = {10.1007/BF02187740},
 	journal = {Discrete Comput. Geom.},
 	pages = {387--421},
 	title = {Applications of random sampling in computational geometry, {II}},
@@ -662,7 +717,8 @@
 	author = {Shamos, Michael I. and Hoey, Dan},
 	booktitle = {Proc. 17th Annu. IEEE Sympos. Found. Comput. Sci.},
 	date-added = {2014-07-20 15:14:05 +0000},
-	date-modified = {2014-07-20 15:14:08 +0000},
+	date-modified = {2025-08-01 13:22:53 -0500},
+	doi = {10.1109/SFCS.1976.16},
 	pages = {208--215},
 	read = {1},
 	title = {Geometric intersection problems},
@@ -1644,27 +1700,32 @@
 	year = {1984}}
 
 @article{d-rysoa-92,
+	arxiv = {cs/9810007},
 	author = {Devillers, Olivier},
 	date-added = {2009-08-26 17:46:52 -0500},
-	date-modified = {2013-02-08 20:52:03 +0000},
+	date-modified = {2025-07-27 21:20:11 -0500},
+	doi = {10.1142/S021819599200007X},
 	journal = {Int. J. Comput. Geom. Appl.},
 	number = {1},
 	pages = {621--635},
 	read = {1},
 	title = {Randomization yields simple {$O(n\log^*n)$} algorithms for difficult {$\Omega(n)$} problems},
 	volume = {2},
-	year = {1992}}
+	year = {1992},
+	bdsk-url-1 = {https://doi.org/10.1142/S021819599200007X}}
 
 @article{ctv-flvat-89,
 	author = {Clarkson, Kenneth L. and Tarjan, Robert E. and Wyk, Christopher J. Van},
 	date-added = {2009-08-26 17:45:28 -0500},
-	date-modified = {2013-02-08 20:52:07 +0000},
+	date-modified = {2025-07-27 21:18:56 -0500},
+	doi = {10.1007/BF02187741},
 	journal = {Discrete Comput. Geom.},
 	pages = {423--432},
 	read = {1},
 	title = {A Fast {Las Vegas} Algorithm for Triangulating a Simple Polygon},
 	volume = {4},
-	year = {1989}}
+	year = {1989},
+	bdsk-url-1 = {https://doi.org/10.1007/BF02187741}}
 
 @article{s-sfira-91,
 	author = {Seidel, Raimund},
