--- a/optimization.bib
+++ b/optimization.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-04-11 06:40:54 -0500 
+%% Created for Jeff Erickson at 2025-08-01 13:12:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -37,11 +37,11 @@
 @article{ay-msnda-13,
 	author = {Alon, Noga and Yuster, Raphael},
 	date-added = {2024-09-22 16:28:28 -0500},
-	date-modified = {2024-09-22 16:36:34 -0500},
-	doi = {https://doi.org/10.1145/2508028.2505989},
+	date-modified = {2025-08-01 13:12:21 -0500},
+	doi = {10.1145/2508028.2505989},
 	journal = {J. ACM},
 	number = {4},
-	pages = {article 25, 18pp.},
+	pages = {25:1--25:18},
 	title = {Matrix sparsification and nested dissection over arbitrary fields},
 	volume = {60},
 	year = {2013},
@@ -3843,7 +3843,8 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	publisher = {Springer-Verlag},
 	series = {Algorithms and Combinatorics},
 	title = {Geometric Algorithms and Combinatorial Optimization},
-	year = {1993}}
+	year = {1993},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-642-78240-4}}
 
 @article{gls-emcco-81,
 	author = {Gr{\"o}tschel, Martin and Lov{\'a}sz, L{\'a}szl{\'o} and Schrijver, Alexander},
